--- a/Login/styles.css
+++ b/Login/styles.css
@@ -8,37 +8,40 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url(/img/background_2.jpg);
+    background-image: url(/img/background_3.jpg);
     background-size: cover;
     background-position: center;
+    font-family: 'Work Sans', sans-serif;
 }
 
-.container{
+.login_container{
     text-align: center;
     align-items: center;
     justify-items: center;
     width: 300px;
     background-color: transparent;
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
     border: 1px solid rgb(	216, 191, 216);
     border-radius: 10px;
     color: white;
     padding: 30px 40px;
-    box-shadow: 0 5px 10px rgba(218, 112, 214, 0.5);
+    box-shadow: 0 5px 10px rgba(102, 51, 153, 0.529);
 }
 
-.container h1{
+.login_container h1{
     text-align: center;
     font-size: 36px;
     padding: 10px;
 }
 
-.boxes {
+.login_boxes {
     display: flex;
     flex-direction: column;
     gap: 12px;
 }
 
-.boxes input{
+.login_boxes input{
     border-radius: 10px;
     border: none;
     padding: 5px 50px;
@@ -51,11 +54,12 @@ body{
     gap: 5px;
 }
 
-.remember_forget {
+.login_remember-forget {
     display: flex;
     justify-content: space-between;  
     align-items: center;  
     margin: 12px 0px;
+    font-size: 13px;
 }
 
 a {
@@ -65,7 +69,7 @@ a {
 
 a:hover {
     text-decoration: underline;
-    color: royalblue;
+    /* color: royalblue; */
 }
 
 button {
@@ -87,8 +91,9 @@ button:hover{
     border: 2px solid rgba(218, 112, 214, 1);
 }
 
-.register {
+.login_register {
     justify-items: center;
     align-items: center;
     margin-top: 10px;
+    font-size: 13px;
 }
