--- a/FAQs/style.css
+++ b/FAQs/style.css
@@ -21,12 +21,12 @@ body {
 
     border: none;
     border-radius: 20px;
-    box-shadow: 15px 25px 25px rgba(81, 81, 81, 0.150) ;
+    box-shadow: 0px 25px 25px rgba(155, 106, 172, 0.320);
 
     padding: 20px;
     max-width: 450px;
     width: 90%;
-    height: 350px;
+    min-height: 350px;
 }
 
 .title,
@@ -36,7 +36,7 @@ body {
 .fourth_FAQ, 
 .fifth_FAQ, 
 .sixth_FAQ {
-    display: flex;
+    display:flow-root;
     align-items: center;
 
     padding: 8px;
@@ -51,10 +51,6 @@ body {
     justify-content: space-between;
 } 
 
-i {
-    color: black;
-}
-
 h1 {
     margin-bottom: 20px;
 }
@@ -65,8 +61,18 @@ h1 {
 
 h2 {
     font-size: 19px;
+    width: 100%;
+
+    cursor: pointer;
+}
+
+h2:hover {
+    color: #a31aa8;
+
 }
 
 p {
-    display: flow-root;
+    padding-top: 10px;
+
+    color: gray;
 }
