--- a/FAQs/style.css
+++ b/FAQs/style.css
@@ -8,6 +8,9 @@ body {
     align-items: center;
     justify-content: center;
 
+    font-family: "exo-2", sans-serif;
+    font-style: normal;
+
     min-height: 100vh;
 
     background-image: url(/img/background_4.svg);
@@ -21,7 +24,10 @@ body {
 
     border: none;
     border-radius: 20px;
-    box-shadow: 0px 25px 25px rgba(155, 106, 172, 0.320);
+    box-shadow: 
+        0px 25px 25px rgba(155, 106, 172, 0.320), 
+        -5px 0px 25px rgba(155, 106, 172, 0.120),
+        5px 0px 25px rgba(155, 106, 172, 0.120);
 
     padding: 20px;
     max-width: 450px;
@@ -53,6 +59,9 @@ body {
 
 h1 {
     margin-bottom: 20px;
+
+    font-size: 30px;
+    text-decoration: underline;
 }
 
 .title {
@@ -75,4 +84,8 @@ p {
     padding-top: 10px;
 
     color: gray;
+
+    transition: max-height 2.0s, ease-in-out;
+
+    font-size: smaller;
 }
